fixed alignemnt + meta tags

--- a/style.css
+++ b/style.css
@@ -100,3 +100,11 @@ body{
   
 }
 
+ /*For alignment debugging purposes*/
+ 
+/*
+ * {
+  outline: 1px solid red;
+  outline-offset: -1px;
+}
+*/
